Adjust some ensureXXX methods to raise different exception types.